update to resolve results list header being too tall in mobile

--- a/Content/style.css
+++ b/Content/style.css
@@ -1587,6 +1587,10 @@ Medium Width Style 600 <=> 900
   display: block;
   }
 
+.height-100 {
+  height: 100%;
+  }
+
 .padded {
   padding: 0 4em;
   }
